sidebar not clicking on mobile view fix

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -9,6 +9,7 @@
   top: 0;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   left: 0;
+  position: sticky;
 }
 .sidebar_item{
   display: flex;
@@ -45,14 +46,16 @@
 
 @media screen and (max-width: 700px) {
   .sidebar{
-    /* bottom: 0;
-    top: unset; */
+    bottom: 0;
+    top: unset;
+    z-index: 189;
     flex-direction: row;
     width: 100%;
     gap: 0;
     height: 100%;
     padding: 0;
     justify-content: space-between;
+
   }
   .sidebar_item span{
     display: none;
